User subsystem swagger generated classes
